packages/dartcv/src/calib3d/calib3d.h

// Draw axes of the world/object coordinate system from pose estimation.
// void cv::drawFrameAxes (InputOutputArray image, InputArray cameraMatrix, InputArray distCoeffs, InputArray rvec, InputArray tvec, float length, int thickness=3)
CvStatus *cv_drawFrameAxes(
    MatInOut image,
    MatIn cameraMatrix,
    MatIn distCoeffs,
    MatIn rvec,
    MatIn tvec,
    float length,
    int thickness,
    CvCallback_0 callback
);
// Computes an optimal affine transformation between two 2D point sets.
CvStatus *cv_estimateAffine2D(VecPoint2f from, VecPoint2f to, Mat *rval, CvCallback_0 callback);
CvStatus *cv_estimateAffine2D_1(
    VecPoint2f from,
    VecPoint2f to,
    Mat inliers,
    int method,
    double ransacReprojThreshold,
    size_t maxIters,
    double confidence,
    size_t refineIters,
    Mat *rval,
    CvCallback_0 callback
);
// Computes an optimal affine transformation between two 3D point sets.
// cv::Mat cv::estimateAffine3D (InputArray src, InputArray dst, double *scale=nullptr, bool force_rotation=true)
CvStatus *cv_estimateAffine3D(
    Mat src,
    Mat dst,
    double *scale,
    bool force_rotation,
    Mat *rval,
    CvCallback_0 callback
);
// Computes an optimal affine transformation between two 3D point sets.
// int cv::estimateAffine3D (InputArray src, InputArray dst, OutputArray out, OutputArray inliers, double ransacThreshold=3, double confidence=0.99)
CvStatus *cv_estimateAffine3D_1(
    Mat src,
    Mat dst,
    CVD_OUT Mat out,
    CVD_OUT Mat inliers,
    double ransacThreshold,
    double confidence,
    int *rval,
    CvCallback_0 callback
);
// Computes an optimal limited affine transformation with 4 degrees of freedom between two 2D point sets.
// cv::Mat cv::estimateAffinePartial2D (InputArray from, InputArray to, OutputArray inliers=noArray(), int method=RANSAC, double ransacReprojThreshold=3, size_t maxIters=2000, double confidence=0.99, size_t refineIters=10)
CvStatus *cv_estimateAffinePartial2D(
    VecPoint2f from, VecPoint2f to, Mat *rval, CvCallback_0 callback
);
CvStatus *cv_estimateAffinePartial2D_1(
    VecPoint2f from,
    VecPoint2f to,
    Mat inliers,
    int method,
    double ransacReprojThreshold,
    size_t maxIters,
    double confidence,
    size_t refineIters,
    Mat *rval,
    CvCallback_0 callback
);
// Estimates the sharpness of a detected chessboard.
// Scalar cv::estimateChessboardSharpness (InputArray image, Size patternSize, InputArray corners, float rise_distance=0.8F, bool vertical=false, OutputArray sharpness=noArray())
CvStatus *cv_estimateChessboardSharpness(MatIn image, CvSize patternSize, MatIn corners, float rise_distance,
                                         bool vertical, MatOut sharpness, Scalar *rval, CvCallback_0 callback);
// Computes an optimal translation between two 3D point sets.
// int cv::estimateTranslation3D (InputArray src, InputArray dst, OutputArray out, OutputArray inliers, double ransacThreshold=3, double confidence=0.99)
CvStatus *cv_estimateTranslation3D(MatIn src, MatIn dst, MatOut out, MatOut inliers, double ransacThreshold,
                                   double confidence, int *rval, CvCallback_0 callback);
// Filters homography decompositions based on additional information.
// void cv::filterHomographyDecompByVisibleRefpoints (InputArrayOfArrays rotations, InputArrayOfArrays normals, InputArray beforePoints, InputArray afterPoints, OutputArray possibleSolutions, InputArray pointsMask=noArray())
CvStatus *cv_filterHomographyDecompByVisibleRefpoints(VecMat rotations, VecMat normals, MatIn beforePoints,
                                                      MatIn afterPoints, MatOut possibleSolutions, MatIn pointsMask,
                                                      CvCallback_0 callback);
// Filters off small noise blobs (speckles) in the disparity map.
// void cv::filterSpeckles (InputOutputArray img, double newVal, int maxSpeckleSize, double maxDiff, InputOutputArray buf=noArray())
CvStatus *cv_filterSpeckles(MatInOut img, double newVal, int maxSpeckleSize, double maxDiff, MatInOut buf,
                            CvCallback_0 callback);
// finds subpixel-accurate positions of the chessboard corners
// bool cv::find4QuadCornerSubpix (InputArray img, InputOutputArray corners, Size region_size)
CvStatus *cv_find4QuadCornerSubpix(MatIn img, MatInOut corners, CvSize region_size, bool *rval, CvCallback_0 callback);
// Finds the positions of internal corners of the chessboard.
// bool cv::findChessboardCorners (InputArray image, Size patternSize, OutputArray corners, int flags=CALIB_CB_ADAPTIVE_THRESH+CALIB_CB_NORMALIZE_IMAGE)
CvStatus *cv_findChessboardCorners(
    Mat image, CvSize patternSize, VecPoint2f *corners, int flags, bool *rval, CvCallback_0 callback
);