packages/dartcv/lib/src/g/calib3d.g.dart


  ffi.Pointer<CvStatus> cv_drawFrameAxes(
    imp1.MatInOut image,
    imp1.MatIn cameraMatrix,
    imp1.MatIn distCoeffs,
    imp1.MatIn rvec,
    imp1.MatIn tvec,
    double length,
    int thickness,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_drawFrameAxes(
      image,
      cameraMatrix,
      distCoeffs,
      rvec,
      tvec,
      length,
      thickness,
      callback,
    );
  }

  late final _cv_drawFrameAxesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatInOut,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatIn,
              ffi.Float,
              ffi.Int,
              imp1.CvCallback_0)>>('cv_drawFrameAxes');
  late final _cv_drawFrameAxes = _cv_drawFrameAxesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatInOut, imp1.MatIn, imp1.MatIn,
          imp1.MatIn, imp1.MatIn, double, int, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_estimateAffine2D(
    VecPoint2f from,
    VecPoint2f to,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_estimateAffine2D(
      from,
      to,
      rval,
      callback,
    );
  }

  late final _cv_estimateAffine2DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint2f, VecPoint2f,
              ffi.Pointer<Mat>, imp1.CvCallback_0)>>('cv_estimateAffine2D');
  late final _cv_estimateAffine2D = _cv_estimateAffine2DPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint2f, VecPoint2f, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_estimateAffine2D_1(
    VecPoint2f from,
    VecPoint2f to,
    Mat inliers,
    int method,
    double ransacReprojThreshold,
    int maxIters,
    double confidence,
    int refineIters,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_estimateAffine2D_1(
      from,
      to,
      inliers,
      method,
      ransacReprojThreshold,
      maxIters,
      confidence,
      refineIters,
      rval,
      callback,
    );
  }

  late final _cv_estimateAffine2D_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f,
              VecPoint2f,
              Mat,
              ffi.Int,
              ffi.Double,
              ffi.Size,
              ffi.Double,
              ffi.Size,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_estimateAffine2D_1');
  late final _cv_estimateAffine2D_1 = _cv_estimateAffine2D_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint2f, VecPoint2f, Mat, int, double,
          int, double, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_estimateAffine3D(
    Mat src,
    Mat dst,
    ffi.Pointer<ffi.Double> scale,
    bool force_rotation,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_estimateAffine3D(
      src,
      dst,
      scale,
      force_rotation,
      rval,
      callback,
    );
  }

  late final _cv_estimateAffine3DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              ffi.Pointer<ffi.Double>,
              ffi.Bool,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_estimateAffine3D');
  late final _cv_estimateAffine3D = _cv_estimateAffine3DPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Pointer<ffi.Double>, bool,
          ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_estimateAffine3D_1(
    Mat src,
    Mat dst,
    Mat out,
    Mat inliers,
    double ransacThreshold,
    double confidence,
    ffi.Pointer<ffi.Int> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_estimateAffine3D_1(
      src,
      dst,
      out,
      inliers,
      ransacThreshold,
      confidence,
      rval,
      callback,
    );
  }

  late final _cv_estimateAffine3D_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              Mat,
              Mat,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Int>,
              imp1.CvCallback_0)>>('cv_estimateAffine3D_1');
  late final _cv_estimateAffine3D_1 = _cv_estimateAffine3D_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, double, double,
          ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_estimateAffinePartial2D(
    VecPoint2f from,
    VecPoint2f to,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_estimateAffinePartial2D(
      from,
      to,
      rval,
      callback,
    );
  }

  late final _cv_estimateAffinePartial2DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f,
              VecPoint2f,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_estimateAffinePartial2D');
  late final _cv_estimateAffinePartial2D =
      _cv_estimateAffinePartial2DPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f, VecPoint2f, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_estimateAffinePartial2D_1(
    VecPoint2f from,
    VecPoint2f to,
    Mat inliers,
    int method,
    double ransacReprojThreshold,
    int maxIters,
    double confidence,
    int refineIters,
    ffi.Pointer<Mat> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_estimateAffinePartial2D_1(
      from,
      to,
      inliers,
      method,
      ransacReprojThreshold,
      maxIters,
      confidence,
      refineIters,
      rval,
      callback,
    );
  }

  late final _cv_estimateAffinePartial2D_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f,
              VecPoint2f,
              Mat,
              ffi.Int,
              ffi.Double,
              ffi.Size,
              ffi.Double,
              ffi.Size,
              ffi.Pointer<Mat>,
              imp1.CvCallback_0)>>('cv_estimateAffinePartial2D_1');
  late final _cv_estimateAffinePartial2D_1 =
      _cv_estimateAffinePartial2D_1Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(VecPoint2f, VecPoint2f, Mat, int,
              double, int, double, int, ffi.Pointer<Mat>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_estimateChessboardSharpness(
    imp1.MatIn image,
    CvSize patternSize,
    imp1.MatIn corners,
    double rise_distance,
    bool vertical,
    imp1.MatOut sharpness,
    ffi.Pointer<Scalar> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_estimateChessboardSharpness(
      image,
      patternSize,
      corners,
      rise_distance,
      vertical,
      sharpness,
      rval,
      callback,
    );
  }

  late final _cv_estimateChessboardSharpnessPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              CvSize,
              imp1.MatIn,
              ffi.Float,
              ffi.Bool,
              imp1.MatOut,
              ffi.Pointer<Scalar>,
              imp1.CvCallback_0)>>('cv_estimateChessboardSharpness');
  late final _cv_estimateChessboardSharpness =
      _cv_estimateChessboardSharpnessPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, CvSize, imp1.MatIn, double,
              bool, imp1.MatOut, ffi.Pointer<Scalar>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_estimateTranslation3D(
    imp1.MatIn src,
    imp1.MatIn dst,
    imp1.MatOut out,
    imp1.MatOut inliers,
    double ransacThreshold,
    double confidence,
    ffi.Pointer<ffi.Int> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_estimateTranslation3D(
      src,
      dst,
      out,
      inliers,
      ransacThreshold,
      confidence,
      rval,
      callback,
    );
  }

  late final _cv_estimateTranslation3DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              ffi.Double,
              ffi.Double,
              ffi.Pointer<ffi.Int>,
              imp1.CvCallback_0)>>('cv_estimateTranslation3D');
  late final _cv_estimateTranslation3D =
      _cv_estimateTranslation3DPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatIn,
              imp1.MatOut,
              imp1.MatOut,
              double,
              double,
              ffi.Pointer<ffi.Int>,
              imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_filterHomographyDecompByVisibleRefpoints(
    VecMat rotations,
    VecMat normals,
    imp1.MatIn beforePoints,
    imp1.MatIn afterPoints,
    imp1.MatOut possibleSolutions,
    imp1.MatIn pointsMask,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_filterHomographyDecompByVisibleRefpoints(
      rotations,
      normals,
      beforePoints,
      afterPoints,
      possibleSolutions,
      pointsMask,
      callback,
    );
  }

  late final _cv_filterHomographyDecompByVisibleRefpointsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(VecMat, VecMat, imp1.MatIn,
                  imp1.MatIn, imp1.MatOut, imp1.MatIn, imp1.CvCallback_0)>>(
      'cv_filterHomographyDecompByVisibleRefpoints');
  late final _cv_filterHomographyDecompByVisibleRefpoints =
      _cv_filterHomographyDecompByVisibleRefpointsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VecMat, VecMat, imp1.MatIn, imp1.MatIn,
              imp1.MatOut, imp1.MatIn, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_filterSpeckles(
    imp1.MatInOut img,
    double newVal,
    int maxSpeckleSize,
    double maxDiff,
    imp1.MatInOut buf,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_filterSpeckles(
      img,
      newVal,
      maxSpeckleSize,
      maxDiff,
      buf,
      callback,
    );
  }

  late final _cv_filterSpecklesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatInOut,
              ffi.Double,
              ffi.Int,
              ffi.Double,
              imp1.MatInOut,
              imp1.CvCallback_0)>>('cv_filterSpeckles');
  late final _cv_filterSpeckles = _cv_filterSpecklesPtr.asFunction<
      ffi.Pointer<CvStatus> Function(imp1.MatInOut, double, int, double,
          imp1.MatInOut, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_find4QuadCornerSubpix(
    imp1.MatIn img,
    imp1.MatInOut corners,
    CvSize region_size,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_find4QuadCornerSubpix(
      img,
      corners,
      region_size,
      rval,
      callback,
    );
  }

  late final _cv_find4QuadCornerSubpixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              imp1.MatIn,
              imp1.MatInOut,
              CvSize,
              ffi.Pointer<ffi.Bool>,
              imp1.CvCallback_0)>>('cv_find4QuadCornerSubpix');
  late final _cv_find4QuadCornerSubpix =
      _cv_find4QuadCornerSubpixPtr.asFunction<
          ffi.Pointer<CvStatus> Function(imp1.MatIn, imp1.MatInOut, CvSize,
              ffi.Pointer<ffi.Bool>, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> cv_findChessboardCorners(
    Mat image,
    CvSize patternSize,
    ffi.Pointer<VecPoint2f> corners,
    int flags,
    ffi.Pointer<ffi.Bool> rval,
    imp1.CvCallback_0 callback,
  ) {
    return _cv_findChessboardCorners(
      image,
      patternSize,
      corners,
      flags,
      rval,
      callback,
    );
  }
